--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "version-tamer-enhanced",
-  "version": "1.0.0",
-  "description": "A dependency management tool for detecting updates and breaking changes.",
-  "main": "version-tamer.mjs",
+  "name": "patchworks",
+  "version": "0.0.01",
+  "description": "A (npm) dependency management tool for detecting updates and breaking changes.",
+  "main": "patchworks.mjs",
   "bin": {
-    "version-tamer": "./version-tamer.mjs"
+    "patchworks": "./patchworks.mjs"
   },
   "scripts": {
-    "start": "node ./version-tamer.mjs",
+    "start": "node ./patchworks.mjs",
     "test": "echo \"No tests specified\" && exit 1"
   },
   "type": "module",
   "dependencies": {
     "@octokit/rest": "^21.0.2",
-    "axios": "^1.5.0",
+    "axios": "^1.7.9",
+    "boxen": "^8.0.1",
     "chalk": "^5.0.0",
-    "conventional-changelog": "^6.0.0",
-    "fs-extra": "^11.1.0",
-    "keep-a-changelog": "^2.0.0",
-    "readline": "^1.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.51.0"
+    "check-types": "^11.2.3",
+    "cheerio": "^1.0.0",
+    "commander": "^13.0.0",
+    "compromise": "^14.14.3",
+    "conventional-commits-parser": "^6.0.0",
+    "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-task-lists": "^2.1.1",
+    "npm-registry-fetch": "^18.0.2",
+    "readline": "^1.3.0",
+    "stemmer": "^2.0.1",
+    "tar-stream": "^3.1.7",
+    "tiny-tfidf": "^0.9.1"
   },
   "keywords": [
     "dependency-management",
