--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@inquirer/prompts": "^7.2.4",
+    "@listr2/prompt-adapter-inquirer": "^2.0.18",
     "@octokit/rest": "^21.0.2",
+    "align-text": "^1.0.2",
     "axios": "^1.7.9",
     "boxen": "^8.0.1",
     "chalk": "^5.0.0",
@@ -21,15 +24,20 @@
     "commander": "^13.0.0",
     "compromise": "^14.14.3",
     "conventional-commits-parser": "^6.0.0",
+    "inquirer": "^12.3.3",
+    "inquirer-file-selector": "^0.6.1",
+    "listr2": "^8.2.5",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "markdown-it-container": "^4.0.0",
     "markdown-it-task-lists": "^2.1.1",
     "npm-registry-fetch": "^18.0.2",
-    "readline": "^1.3.0",
+    "sanitize-html": "^2.14.0",
     "stemmer": "^2.0.1",
+    "table": "^6.9.0",
     "tar-stream": "^3.1.7",
-    "tiny-tfidf": "^0.9.1"
+    "tiny-tfidf": "^0.9.1",
+    "tty-table": "^4.2.3"
   },
   "keywords": [
     "dependency-management",
