--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "patchworks",
   "version": "0.0.01",
   "description": "A (npm) dependency management tool for detecting updates and breaking changes.",
-  "main": "patchworks.mjs",
+  "main": "dist/patchworks.js",
   "bin": {
-    "patchworks": "./patchworks.mjs"
+    "patchworks": "./dist/patchworks.js"
   },
   "scripts": {
-    "start": "node ./patchworks.mjs",
-    "test": "echo \"No tests specified\" && exit 1"
+    "start": "node ./dist/patchworks.js",
+    "test": "echo \"No tests specified\" && exit 1",
+    "build": "babel src --out-dir dist"
   },
   "type": "module",
   "dependencies": {
@@ -45,5 +46,10 @@
     "breaking-changes"
   ],
   "author": "Everyone",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8"
+  }
 }
