--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "bin": {
     "patchworks": "./dist/patchworks.js"
   },
+  "publishConfig": {
+  "registry": "https://npm.pkg.github.com"
+},
   "scripts": {
     "start": "node ./dist/patchworks.js",
     "test": "echo \"No tests specified\" && exit 1",
