--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "patchworks": "./dist/patchworks.js"
   },
   "publishConfig": {
-  "registry": "https://npm.pkg.github.com"
-},
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "start": "node ./dist/patchworks.js",
     "test": "echo \"No tests specified\" && exit 1",
@@ -41,11 +41,9 @@
     "markdown-it-task-lists": "^2.1.1",
     "npm-registry-fetch": "^18.0.2",
     "sanitize-html": "^2.14.0",
-    "stemmer": "^2.0.1",
     "table": "^6.9.0",
     "tar-stream": "^3.1.7",
-    "tiny-tfidf": "^0.9.1",
-    "tty-table": "^4.2.3"
+    "tiny-tfidf": "^0.9.1"
   },
   "keywords": [
     "dependency-management",
