Add ESLint configuration

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix",
+    "lint": "eslint -c .eslintrc.json \"src/**/*.js\"",
+    "lint:fix": "eslint -c .eslintrc.json \"src/**/*.js\" --fix",
     "format": "prettier --write \"src/**/*.js\"",
     "prepublishOnly": "npm run lint && npm test",
     "prepare": "npm run build --if-present",
