--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "files": [
     "bin/",
     "src/",
+    "analysis/",
+    "config/",
+    "menus/",
+    "prompts/",
+    "reports/",
+    "tasks/",
+    "utils/",
+    "versionLogs/",
     "README.md",
     "LICENSE"
   ],
@@ -16,11 +24,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint -c .eslintrc.json \"src/**/*.js\"",
-    "lint:fix": "eslint -c .eslintrc.json \"src/**/*.js\" --fix",
-    "format": "prettier --write \"src/**/*.js\"",
-    "prepublishOnly": "npm run lint && npm test",
-    "prepare": "npm run build --if-present",
+    "lint": "eslint -c .eslintrc.json \"src/**/*.js\" \"analysis/**/*.js\" \"config/**/*.js\" \"menus/**/*.js\" \"prompts/**/*.js\" \"reports/**/*.js\" \"tasks/**/*.js\" \"utils/**/*.js\" \"versionLogs/**/*.js\"",
+    "lint:fix": "eslint -c .eslintrc.json \"src/**/*.js\" \"analysis/**/*.js\" \"config/**/*.js\" \"menus/**/*.js\" \"prompts/**/*.js\" \"reports/**/*.js\" \"tasks/**/*.js\" \"utils/**/*.js\" \"versionLogs/**/*.js\" --fix",
+    "format": "prettier --write \"src/**/*.js\" \"analysis/**/*.js\" \"config/**/*.js\" \"menus/**/*.js\" \"prompts/**/*.js\" \"reports/**/*.js\" \"tasks/**/*.js\" \"utils/**/*.js\" \"versionLogs/**/*.js\"",
+    "prepare": "chmod +x bin/patchworks.js",
+    "pre-publish": "./scripts/pre-publish.sh",
+    "prepublishOnly": "./scripts/pre-publish.sh && npm run lint && npm test",
     "local:install": "npm link",
     "local:uninstall": "npm unlink"
   },
