--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "patchworks",
   "version": "0.1.0",
   "description": "A CLI tool to manage dependency updates by semantic versioning, breaking change detection, and batch selection for efficient prioritization",
-  "main": "src/index.js",
+  "main": "src/cli/index.js",
   "bin": {
     "patchworks": "./bin/patchworks.js"
   },
@@ -59,19 +59,16 @@
   },
   "type": "module",
   "dependencies": {
-    "chalk": "^5.0.0",
-    "commander": "^13.0.0",
-    "semver": "^7.3.8",
-    "axios": "^1.7.9",
-    "ora": "^5.4.1",
-    "marked": "^4.2.0",
     "@inquirer/prompts": "^7.3.2",
     "@listr2/prompt-adapter-inquirer": "^2.0.18",
     "@octokit/rest": "^21.1.1",
     "align-text": "^1.0.2",
+    "axios": "^1.7.9",
     "boxen": "^8.0.1",
+    "chalk": "^5.0.0",
     "check-types": "^11.2.3",
     "cheerio": "^1.0.0",
+    "commander": "^13.0.0",
     "compromise": "^14.14.3",
     "conventional-commits-parser": "^6.1.0",
     "inquirer": "^12.4.2",
@@ -81,8 +78,12 @@
     "markdown-it": "^14.1.0",
     "markdown-it-container": "^4.0.0",
     "markdown-it-task-lists": "^2.1.1",
+    "marked": "^4.2.0",
     "npm-registry-fetch": "^18.0.2",
+    "ora": "^5.4.1",
+    "patchworks": "^0.0.3",
     "sanitize-html": "^2.14.0",
+    "semver": "^7.3.8",
     "table": "^6.9.0",
     "tar-stream": "^3.1.7",
     "tiny-tfidf": "^0.9.1"
