Add CHANGELOG.md for version 0.1.0 release, update README with installation verification, and enhance package.json with new scripts and file inclusions. Introduce CI workflows for testing, security, and publishing to NPM.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "utils/",
     "versionLogs/",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "SECURITY.md",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "test": "jest",
@@ -41,7 +43,22 @@
     "npm",
     "package-management",
     "release-notes",
-    "github"
+    "github",
+    "dependency-updates",
+    "package-updates",
+    "version-management",
+    "changelog-analysis",
+    "tfidf-ranking",
+    "vulnerability-detection",
+    "patch-management",
+    "minor-updates",
+    "major-updates",
+    "dependency-analysis",
+    "npm-audit",
+    "package-security",
+    "devops",
+    "automation",
+    "maintenance"
   ],
   "author": "Shane Miller <your-email@example.com>",
   "license": "MIT",
