--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,18 @@
   "env": {
     "browser": false,
     "node": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
   "extends": ["eslint:recommended"],
+  "plugins": [],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "no-useless-escape": "warn",
+    "no-case-declarations": "warn"
+  }
 }
