--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["@babel/preset-env"],
-  "ignore": ["node_modules"]
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"]
 }
