--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.9",
     "@types/align-text": "^1.0.4",
     "@types/conventional-commits-parser": "^5.0.1",
     "@types/lodash": "^4.17.20",
