--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "LICENSE"
   ],
   "scripts": {
-    "test": "npm run build && jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "npm run build && vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "lint": "eslint -c .eslintrc.json \"src/**/*.js\" \"analysis/**/*.js\" \"config/**/*.js\" \"menus/**/*.js\" \"prompts/**/*.js\" \"reports/**/*.js\" \"tasks/**/*.js\" \"utils/**/*.js\" \"versionLogs/**/*.js\"",
     "lint:fix": "eslint -c .eslintrc.json \"src/**/*.js\" \"analysis/**/*.js\" \"config/**/*.js\" \"menus/**/*.js\" \"prompts/**/*.js\" \"reports/**/*.js\" \"tasks/**/*.js\" \"utils/**/*.js\" \"versionLogs/**/*.js\" --fix",
     "format": "prettier --write \"src/**/*.js\" \"analysis/**/*.js\" \"config/**/*.js\" \"menus/**/*.js\" \"prompts/**/*.js\" \"reports/**/*.js\" \"tasks/**/*.js\" \"utils/**/*.js\" \"versionLogs/**/*.js\"",
@@ -107,19 +108,16 @@
     "tiny-tfidf": "^0.9.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.9",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.27.1",
     "@types/align-text": "^1.0.4",
     "@types/conventional-commits-parser": "^5.0.1",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.3.0",
     "@types/semver": "^7.7.0",
     "@types/tar-stream": "^3.1.4",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^8.0.0",
-    "jest": "^29.0.0",
     "prettier": "^2.8.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
