feat: enhance TypeScript support and improve CLI functionality
- Updated `.gitignore` to exclude compiled TypeScript files while retaining essential config and test files.
- Added `tsx` and `get-tsconfig` as development dependencies in `package.json` for improved TypeScript execution.
- Refactored `package.json` to point to the compiled output in `dist/` for the main entry and binary.
- Modified `tsconfig.build.json` to output compiled files to the `dist` directory and include declaration maps.
- Updated `vitest.config.js` to use TypeScript for setup files.
- Enhanced type safety in `analysis/analyzeLogData.ts` by introducing a flattening function for list items.
- Improved logging functionality in `reports/logger.ts` with a comprehensive interface for type-safe logging.
- Added new tests for CLI error handling and validation to ensure robust functionality.
- Refactored CLI command files to utilize the new `FinalOptions` type for better option management.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ dist/
 .npmrc
 patchworks-config.json
 .cursor
+
+# Compiled TypeScript files alongside source (only keep in dist/)
+/**/*.js
+/**/*.d.ts
+/**/*.d.ts.map
+
+# Exception: Keep essential config and test files
+!vitest.config.js
+!src/__tests__/setup.js
+!.eslintrc.js
