fix(ci): correct executable path and add build step in quality job
- Fix file permission check to look for dist/bin/patchworks.js instead of bin/patchworks.js
- Add explicit build step before package validation to ensure TypeScript is compiled
- Resolves CI pipeline failure in quality job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Build project
+      run: npm run build
+      
     - name: Check package validity
       run: npm pack --dry-run
       
@@ -101,7 +104,7 @@ jobs:
         
     - name: Check file permissions
       run: |
-        if [[ ! -x bin/patchworks.js ]]; then
+        if [[ ! -x dist/bin/patchworks.js ]]; then
           echo "❌ Binary file is not executable"
           exit 1
         fi
